2009-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c: Added missing include. Resolves
	compiler warning.

2009-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/attack.c: Added missing include. Resolves compiler warning.

2009-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c (scanner_thread): Removed handling
	of SSL version being set to "none". This does not make sense
	to handle. If none is specified, now the scanner will fall back
	to its default as done before for any unknown SSL identifier.

2009-10-13  Matthew Mundell <matthew.mundell@intevation.de>

	* openvassd/comm.c: Replace category name list with ACT_STRING_LIST_ALL.

2009-10-13  Matthew Mundell <matthew.mundell@intevation.de>

	* openvassd/comm.c, ChangeLog: Flush trailing whitespace.

2009-10-12  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/openvassd.c (main): Made command line options more
	consistent with other modules and coding standards. Short option for
	--version is now -V (was -v).

2009-10-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvas-mkcert-client.in, openvas-mkcert.in: Changed Paris to Berlin
	for the default.

2009-10-08  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/otp_1_0.c (otp_1_0_server_send_certificates): Added todo
	for segfault on nonexistent public key.

2009-10-06  Tim Brown <timb@openvas.org>

	* openvassd/utils.c: Fixed memory leak, typos and resource leak. Also added
	todo for TOCTOU race condition on temp_file_name() (details sent to
	openvas-devel@).

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.0-beta3 release.

	* VERSION: Set to 3.0.0.beta3
